--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3874,8 +3874,9 @@ found in the list of installed apps.</string>
 	<string name="junk_frontend_apply_theme">Apply Theme</string>
 	<string name="junk_frontend_name_theme">Theme Name</string>
 	
-	<string name="junk_quiet_time">Quiet Time</string>
-	<string name="junk_quiet_time_all">Default Settings</string>
+	<string name="junk_quiet_time">Quiet Time Mode</string>
+	<string name="junk_quiet_time_notif">Show Notifications</string>
+	<string name="junk_quiet_time_daily">Daily</string>
 	<string name="junk_quiet_time_sun">Sunday</string>	
 	<string name="junk_quiet_time_mon">Monday</string>
 	<string name="junk_quiet_time_tue">Tuesday</string>
